# VIX

./: .gitignore  CLAUDE.md  PRODUCTION_AUDIT.md  QUICKSTART.md  README.md  RUNNING.md  golden_00.txt  pyproject.toml  requirements-tier2.txt
docs/: SETUP_OTHER_MACHINE.md  collaboration-journey.html  goal.md
examples/: demo.py  gui_check_animals.py  guide_boxes.py  guide_capture.py  guide_render.py  select_cluster.py  serve_animals.py  serve_app.py  serve_dataset.py  serve_existing.py
jdg_export/: data.yaml  export_manifest.jsonl
jdgws/: calibration.json  decision_log.jsonl  decision_log.jsonl.hwm  manifest.jsonl  memory_state.pkl  relabel_changes.jsonl  snapshot_final.json  thresholds.json
runws/: decision_log.jsonl  decision_log.jsonl.hwm  manifest.jsonl  memory_state.pkl  routing_current.json  snapshot_v1.json  thresholds.json
scripts/: setup_tier2.ps1
tests/: test_analytics.py  test_bank_audit.py  test_batch_gate.py  test_box_audit_trendfix.py  test_box_qa.py  test_box_tightness.py  test_calibration_coverage.py  test_challenge_guard.py  test_cli_smoke.py  test_concepts.py  test_consistency.py  test_coverage_manager.py  test_coverage_regions.py  test_decision_log.py  test_diagnose_compare.py  test_dinov2_torch.py  test_e2e_realfiles.py  test_embed_adapt.py  test_encoder_fingerprint.py  test_error_mine_boxlevel.py  test_errors.py  test_eval_ingest_listmode.py  test_eval_run_diagnose.py  test_eval_typed.py  test_exporter.py  test_gui_browser.py  test_gui_e2e.py  test_hardneg.py  test_image_quality.py  test_import_labels_cli.py  test_keystone.py  (+41 more)
(+153 files in other folders)
